Fixed positioning of the learn more button, and spacing of header in the about-blocks.

--- a/css/index.css
+++ b/css/index.css
@@ -210,18 +210,24 @@ footer nav a {
 }
 
 .button {
-    display: inline-block;
+    display: block;
     color: #000;
     text-decoration: none;
     border: 2px solid #000;
     padding: 10px 20px;
     border-radius: 10px;
     margin-top: 20px;
+    width: 40%;
+    text-align: center;
 }
 
 .about-blocks-child {
     width: 45%;
     margin-bottom: 20px;
+}
+
+.about-blocks-child  h3 {
+    padding-top: 10px;
 }
 
 .about-blocks {
